--- a/taskmanager/templates/categories.html
+++ b/taskmanager/templates/categories.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 
-<h3 class="light-blue-text darken-4 center-align">Categories</h3>
+<h3 class="light-blue-text text-darken-4 center-align">Categories</h3>
 
 <div class="row">
     <div class="col s12 center-align">
@@ -9,22 +9,6 @@
             Add Category <i class="fas fa-plus-square right"></i>
         </a>
     </div>
-</div>
-
-<div class="row">
-    {% for category in categories %}
-    <div class="col s12 m6 l3">
-        <div class="card blue-grey darken-1 center-align">
-            <div class="card-content white-text">
-                <span class="card-title">{{ category.category_name }}</span>
-            </div>
-            <div class="card-action">
-                <a href="#" class="btn green accent-4">Edit</a>
-                <a href="#" class="btn red">Delete</a>
-            </div>
-        </div>
-    </div>
-    {% endfor %}
 </div>
 
 {% endblock %}
